traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:11: error: Missing closing brace `}' assumed here
}
^TraversalByColumn:14: error: expected class or object definition
def PositionFinale() : Boolean = {
^